# clcoco

./: .gitignore  README.md
airgap/bundle/: README.md  build-bundle.sh  install.sh  uninstall.sh
airgap/bundle/lib/: 10-k3s.sh  20-load-images.sh  25-platform.sh  30-apply-manifests.sh
airgap/docs/: DEMO-POSTURE.md  RUST-OFFLINE-BUILD.md  TEAM-ACCESS.md
airgap/edge-agent/: .dockerignore  .gitignore  Cargo.toml  Containerfile  Containerfile.dev  README.md
airgap/edge-agent/src/: main.rs
airgap/k8s/edge-demo/: 00-namespace.yaml  10-mosquitto.yaml  20-timescaledb.yaml  30-sensor-sim.yaml  40-bridge.yaml  41-edge-agent.yaml  50-grafana.yaml  51-grafana-resources.yaml  52-comparison-dashboard.yaml  55-servicemonitors.yaml  60-burst-job.yaml  (+1 more)
airgap/scripts/: airgap-net.xml  airgap-portfwd.service  bootstrap-net.sh  build-edge-agent.sh  compare-bridges.sh  create-all-vms.sh  create-vm.sh  destroy-vm.sh  distribute-bundle.sh  distribute-ca.sh  import-edge-agent.sh  infra-ca.sh  infra-services.sh  install-host.sh  install-k3s.sh  portfwd.sh  run-burst.sh  vm-spec.conf  wait-for-vms.sh
apps/: README.md
apps/hello/: Dockerfile  README.md
demo/: PREP.md  RUNBOOK.md  collect-pod-stats.sh  reset.sh  verify.sh
demo/grafana/: bridge-footprint.json
platform/: README.md
platform/gitea/: README.md
platform/harbor/: README.md  install.sh  provision_harbor.sh  setup_docker.sh  setup_harbor.sh
platform/k3s/: README.md  apply-imagepullsecrets.sh  gen-runner-kubeconfig.sh  gitea-runner-rbac.yaml  install-registries.sh  registries.yaml.tmpl
seed/: create-repos.sh
(+29 files in other folders)
